[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://PancerniKal.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
position = Vector2( 0, 5.03969 )
script = ExtResource( 2 )

[node name="WybierzZastep" type="Label" parent="."]
margin_left = 5.03973
margin_top = 7.55951
margin_right = 607.04
margin_bottom = 162.56
custom_fonts/font = SubResource( 1 )
text = "Wybierz ZastÄ™p"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pancerni" type="Button" parent="."]
margin_left = 188.988
margin_top = 236.865
margin_right = 404.988
margin_bottom = 327.865
custom_fonts/font = SubResource( 2 )
text = "Pancerni"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Dragoni" type="Button" parent="."]
margin_left = 188.988
margin_top = 362.857
margin_right = 404.988
margin_bottom = 453.857
custom_fonts/font = SubResource( 2 )
text = "Dragoni"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Rajtarzy" type="Button" parent="."]
margin_left = 189.874
margin_top = 484.995
margin_right = 405.874
margin_bottom = 575.995
custom_fonts/font = SubResource( 2 )
text = "Rajtarzy"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Lisowczycy" type="Button" parent="."]
margin_left = 189.621
margin_top = 605.317
margin_right = 405.621
margin_bottom = 696.317
custom_fonts/font = SubResource( 2 )
text = "Lisowczycy"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Korsarze" type="Button" parent="."]
margin_left = 190.885
margin_top = 730.907
margin_right = 406.885
margin_bottom = 821.907
custom_fonts/font = SubResource( 2 )
text = "Korsarze"
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="PancerniKal" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Pancerni" to="." method="_on_Pancerni_pressed"]
[connection signal="pressed" from="Dragoni" to="." method="_on_Dragoni_pressed"]
[connection signal="pressed" from="Rajtarzy" to="." method="_on_Rajtarzy_pressed"]
[connection signal="pressed" from="Lisowczycy" to="." method="_on_Lisowczycy_pressed"]
[connection signal="pressed" from="Korsarze" to="." method="_on_Korsarze_pressed"]
